--- a/freemart/static/stylesScripts/chatroomStyles-b.css
+++ b/freemart/static/stylesScripts/chatroomStyles-b.css
@@ -33,10 +33,6 @@
   border-right: none;
 }
 
-.message-input-btn {
-  border-color: rgba(13, 24, 22, 0.3);
-}
-
 
 @media only screen and (min-width: 992px) {
   .messages-container {
